manual demo entries (blog, posts)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,16 @@
 </head>
 <body>
 
+  <div class="sidebar two columns"> 
+    <nav> 
+      <ul> 
+        <li>
+        <%= link_to "New post...", new_post_path %>
+        </li> 
+      </ul> 
+    </nav> 
+  </div>
+
 <%= yield %>
 
 </body>
