--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -1,4 +1,8 @@
 <h1><%= @blog.title %></h1>
 <h1><%= @blog.subtitle %></h1>
 
+jak sie masz
+
+<%= @blog.entries.count %> </ br>
+
 <%= render partial: "entry", collection: @blog.entries %>
