--- a/app/views/blog/_entry.html.erb
+++ b/app/views/blog/_entry.html.erb
@@ -1,5 +1,7 @@
 <article>
   <header>
-<h3><%= entry.title %></h3> </header>
-<p><%= entry.body %></p>
+    <p><time pubdate="pubdate"><%= entry.pubdate %></time></p>
+    <h3><%= entry.title %></h3> 
+  </header>
+  <p><%= entry.body %></p>
 </article>
